# TEXSONICS-RoboStudio

./: .gitignore  ActionButton.qml  AxisControl.qml  CMakeLists.txt  CameraController.qml  GridEnvironment.qml  IconPaths.qml  LeftPanel.qml  Main.qml  MiniInput.qml  PanelCard.qml  RightPanel.qml  RobotArm.qml  StatusButton.qml  ValueBox.qml  VectorButton.qml  VirtualKeypad.qml  main.cpp
meshes/: link0.mesh  link2.mesh  link4.mesh  link5.mesh  m0.mesh  m1.mesh  m2.mesh
